tests/compile_fail/incorrect_import.rs
use chocolatier::chocolatier;

#[chocolatier]
mod inline {
    import!(framwork = "NSFoundation");
}

fn main() {}
