tests/compile_fail/incorrect_import.stderr
error: expected `framework`
 --> $DIR/incorrect_import.rs:5:13
  |
5 |     import!(framwork = "NSFoundation");
  |             ^^^^^^^^
